--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,10 @@ dependencies:
     sdk: flutter
   cloud_firestore: ^3.4.3
   firebase_database: ^9.1.0
+  firebase_auth: ^3.6.2
+  email_validator: ^2.0.1
+  built_value: ^8.1.1
+  built_collection:
 
 
 
@@ -41,6 +45,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  built_value_generator:
+  build_runner:
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
